<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.cfmleditor</groupId>
	<artifactId>cflint</artifactId>
	<version>1.5.15-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>cflint</name>
	<description
    >A static code analysis tool for ColdFusion (in the spirit of FindBugs and Lint). With cflint, you are able to analyze your ColdFusion code base for code violations.</description>
	<url>https://github.com/cfmleditor/cflint</url>
	<inceptionYear>2013</inceptionYear>
	<organization>
		<name>cflint</name>
	</organization>

	<developers>
		<developer>
			<name>Ryan Eberly</name>
			<email>ryaneberly@gmail.com</email>
			<organization>cfparser</organization>
			<organizationUrl>https://github.com/ryaneberly</organizationUrl>
		</developer>
		<developer>
			<name>Jerron James</name>
			<email>jjames967@gmail.com</email>
			<organization>cfparser</organization>
			<organizationUrl>https://github.com/jjames967</organizationUrl>
		</developer>
		<developer>
			<name>Denny Valliant</name>
			<email>valliantster@gmail.com</email>
			<organization>cfparser</organization>
			<organizationUrl>https://github.com/denuno</organizationUrl>
		</developer>
		<developer>
			<name>Gareth Edwards</name>
			<email>ghedwards@gmail.com</email>
			<organization>cfmleditor</organization>
			<organizationUrl>https://github.com/cfmleditor</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:cfmleditor/cflint.git</connection>
		<developerConnection
        >scm:git:git@github.com:cfmleditor/cflint.git</developerConnection>
		<url>git@github.com:cfmleditor/cflint.git</url>
	</scm>

	<repositories>
		<repository>
			<id>sonatype</id>
			<name>sonatype</name>
			<url>https://oss.sonatype.org/content/repositories/releases</url>
		</repository>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/cfmleditor/cfparser</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>

	<licenses>
		<license>
            <name>The New BSD License</name>
            <url>https://opensource.org/licenses/bsd-license.html</url>
            <distribution>repo</distribution>
        </license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.proc>none</maven.compiler.proc>

		<!-- cfparser java-11 line (local mvn install until published). -->
		<cfparser.version>11.0.0</cfparser.version>
		<jackson.version>2.22.2</jackson.version>
		<slf4j.version>2.0.19</slf4j.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.github.cfmleditor</groupId>
			<artifactId>cfml.parsing</artifactId>
			<version>${cfparser.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>1.10.18</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
		  <groupId>com.fasterxml.jackson.module</groupId>
		  <artifactId>jackson-module-jakarta-xmlbind-annotations</artifactId>
		  <version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
			<version>12.10</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.stax-utils</groupId>
			<artifactId>stax-utils</artifactId>
			<version>20070216</version>
			<exclusions>
				<exclusion>
					<groupId>com.bea.xml</groupId>
					<artifactId>jsr173-ri</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.xml</groupId>
					<artifactId>jsr173</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.22.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Test Dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.10</version>
				<executions>
					<execution>
						<id>assemble-standalone</id>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
						<configuration>
							<programs>
								<program>
									<mainClass>com.cflint.cli.CFLintCLI</mainClass>
									<!-- the name of the bat/sh files to be generated -->
									<name>cflint</name>
								</program>
								<program>
									<mainClass>com.cflint.cli.CFLintCLI</mainClass>
									<commandLineArguments>
										<commandLineArgument>--ui</commandLineArgument>
									</commandLineArguments>
									<!-- the name of the bat/sh files to be generated -->
									<name>cflint-ui</name>
								</program>
							</programs>
							<platforms>
								<platform>windows</platform>
								<platform>unix</platform>
							</platforms>
							<repositoryLayout>flat</repositoryLayout>
							<repositoryName>lib</repositoryName>
							<configurationDirectory>etc</configurationDirectory>
							<configurationSourceDirectory>src/main/config</configurationSourceDirectory>
							<copyConfigurationDirectory>true</copyConfigurationDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Bundle-Name>cflint</Bundle-Name>
                            <Bundle-SymbolicName
                            >com.cflint.cflint</Bundle-SymbolicName>
                            <Bundle-Description>cflint</Bundle-Description>
                            <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
                            <Bundle-Version>${project.version}</Bundle-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>integration-test</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/appassembler/ant</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/ant</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"
                                >
									<mainClass>com.cflint.cli.CFLintCLI</mainClass>
								</transformer>
							</transformers>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>all</shadedClassifierName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
			<groupId>pl.project13.maven</groupId>
			<artifactId>git-commit-id-plugin</artifactId>
			<version>2.2.2</version>
			<executions>
				<execution>
					<phase>validate</phase>
					<goals>
						<goal>revision</goal>
					</goals>
				</execution>
			</executions>
			<configuration>
				<dateFormat>yyyyMMdd-HHmmss</dateFormat>
				<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
				<generateGitPropertiesFilename
                    >${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
				<generateGitPropertiesFile>true</generateGitPropertiesFile>
				<failOnNoGitDirectory>false</failOnNoGitDirectory>
				<failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
			</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>3.2.2</version>
			    <configuration>
			        <forkCount>1</forkCount>
			        <reuseForks>true</reuseForks>
			        <argLine
                    >-Xmx2g --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -Djdk.xml.totalEntitySizeLimit=0</argLine>
			    </configuration>
			  </plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>allow-snapshots</id>
			<activation><activeByDefault>true</activeByDefault></activation>
			<repositories>
				<repository>
					<id>snapshots-repo</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
					<releases><enabled>false</enabled></releases>
					<snapshots><enabled>true</enabled></snapshots>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>deploy</id>
			<build>
				<plugins>
		 	<!-- deployment -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.8</version>
				<configuration>
					<verbose>false</verbose>
					<addSvnKeyWords>true</addSvnKeyWords>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<licenseName>bsd_2</licenseName>
							<roots>
								<root>src/main/java</root>
								<root>src/test</root>
							</roots>
							<includes>
								<include>*.java</include>
							</includes>
							<excludes>
								<exclude>cfml.dictionary*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.5</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<!-- end deployment -->
			     </plugins>
		      </build>
	       </profile>
	</profiles>

	<!-- mvn versions:set -DnewVersion=1.2.1 -->
	<!-- Sonatype: mvn clean package -P deploy -->
	<!-- Sonatype: mvn verify gpg:sign -DskipTests -P deploy -->
	<!-- Sonatype: mvn deploy -DskipTests -P deploy -->
	<!-- Sonatype: mvn nexus-staging:release -P deploy -DskipTests -->
	<distributionManagement>
		<snapshotRepository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/cfmleditor/cflint</url>
		</snapshotRepository>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/cfmleditor/cflint</url>
		</repository>
	</distributionManagement>
</project>
